Fix ID field not showing

--- a/style.css
+++ b/style.css
@@ -61,4 +61,6 @@ html, body {
 
 #scanner {
     font-family: monospace;
+    display: none;
+    transition: all 1s ease-out;
 }
